--- a/Programming_Part.ipynb
+++ b/Programming_Part.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c7a850eb",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a7aa0bed",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "7dc9e190",
    "metadata": {},
    "outputs": [
@@ -128,28 +128,7 @@
        "(64, 73214)"
       ]
      },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "steady_mat.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "59a72cf2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(64, 73214)"
-      ]
-     },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,6 +140,27 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "59a72cf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 73214)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "steady_mat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "31612912",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3c3731bf",
    "metadata": {},
    "outputs": [
@@ -222,11 +222,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b8f19c59",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def detect_spikes(filtered_data):\n",
+    "    # Implement spike detection logic\n",
+    "    # Define a threshold (you can adjust this based on your data)\n",
+    "    threshold = 3.0  # Adjust the threshold value\n",
+    "\n",
+    "    # Create an empty list to store spike times\n",
+    "    spike_times = []\n",
+    "\n",
+    "    for i in range(1, len(filtered_data)):\n",
+    "        if filtered_data[i] > threshold and filtered_data[i] > filtered_data[i - 1]:\n",
+    "            spike_times.append(i)\n",
+    "    return spike_times"
+   ]
   },
   {
    "cell_type": "code",
@@ -235,9 +248,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_spikes(data):\n",
-    "    # Implement spike detection logic\n",
-    "    pass\n",
     "\n",
     "def sort_spikes(spikes):\n",
     "    # Implement spike sorting logic, potentially using clustering or PCA\n",
@@ -293,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
