--- a/Programming_Part.ipynb
+++ b/Programming_Part.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0c05e778",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c7a850eb",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a7aa0bed",
    "metadata": {},
    "outputs": [],
@@ -118,29 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7dc9e190",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(64, 73214)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "steady_mat.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "59a72cf2",
+   "id": "7dc9e190",
    "metadata": {},
    "outputs": [
     {
@@ -161,6 +140,27 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "59a72cf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 73214)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "steady_mat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "31612912",
    "metadata": {},
    "outputs": [
@@ -191,9 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3c3731bf",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -222,68 +224,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b8f19c59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_spikes(filtered_data):\n",
-    "    # Implement spike detection logic\n",
-    "    # Define a threshold (you can adjust this based on your data)\n",
-    "    threshold = 3.0  # Adjust the threshold value\n",
+    "import numpy as np\n",
+    "from sklearn.decomposition import FastICA\n",
     "\n",
-    "    # Create an empty list to store spike times\n",
-    "    spike_times = []\n",
+    "def apply_ica(data, num_components):\n",
+    "    # Initialize ICA\n",
+    "    ica = FastICA(n_components=num_components, random_state=0)\n",
+    "    # Fit and transform the data to the ICA model\n",
+    "    S_ = ica.fit_transform(data)  # Reconstruct signals\n",
+    "    A_ = ica.mixing_  # Get estimated mixing matrix\n",
+    "    \n",
+    "    return S_, A_\n",
     "\n",
-    "    for i in range(1, len(filtered_data)):\n",
-    "        if filtered_data[i] > threshold and filtered_data[i] > filtered_data[i - 1]:\n",
-    "            spike_times.append(i)\n",
-    "    return spike_times"
+    "# Assuming the number of electrodes gives an upper limit on components\n",
+    "num_components = increase_mat_one.shape[0]\n",
+    " \n",
+    "# Apply ICA to each dataset\n",
+    "S_increase_one, A_increase_one = apply_ica(filted_increase_mat_one, num_components)\n",
+    "S_increase_two, A_increase_two = apply_ica(filted_increase_mat_two, num_components)\n",
+    "S_steady, A_steady = apply_ica(filted_steady_mat, num_components)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "46e8412c",
+   "execution_count": 11,
+   "id": "0bcbbd9e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def extract_features(component):\n",
+    "    # Placeholder function to extract features like amplitude, duration, etc.\n",
+    "    features = {\n",
+    "        'amplitude': np.ptp(component),\n",
+    "        # Add more features here\n",
+    "    }\n",
+    "    return features\n",
     "\n",
-    "def sort_spikes(spikes):\n",
-    "    # Implement spike sorting logic, potentially using clustering or PCA\n",
-    "    pass\n",
+    "def validate_component(features):\n",
+    "    # Placeholder function for validation based on features\n",
+    "    is_valid = True  # Change this based on actual criteria\n",
+    "    # Example: Check amplitude range\n",
+    "    if not (5 <= features['amplitude'] <= 200):\n",
+    "        is_valid = False\n",
+    "    # Add more criteria here\n",
+    "    return is_valid\n",
     "\n",
-    "def track_motor_units(sorted_spikes):\n",
-    "    # Implement motor unit tracking logic\n",
-    "    pass\n",
+    "# Now apply these to your components\n",
+    "valid_components = []\n",
+    "for i, component in enumerate(S_increase_one):\n",
+    "    features = extract_features(component)\n",
+    "    if validate_component(features):\n",
+    "        valid_components.append(component)\n",
     "\n",
-    "def motor_unit_decomposition(hdemg_data):\n",
-    "    # Preprocess the data\n",
-    "    filtered_data = filt_GRID(hdemg_data)\n",
-    "    \n",
-    "    # Detect spikes\n",
-    "    spikes = detect_spikes(filtered_data)\n",
-    "    \n",
-    "    # Sort spikes into potential motor units\n",
-    "    sorted_spikes = sort_spikes(spikes)\n",
-    "    \n",
-    "    # Track motor units across time and channels\n",
-    "    motor_units = track_motor_units(sorted_spikes)\n",
-    "    \n",
-    "    # Validate and refine motor unit detection\n",
-    "    validated_motor_units = validate_motor_units(motor_units)\n",
-    "    \n",
-    "    return validated_motor_units\n",
+    "# Now 'valid_components' holds components that passed the validation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "242162e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score_temporal_independence(component, other_components):\n",
+    "    # Placeholder for scoring temporal independence.\n",
+    "    # Could use cross-correlation as one possible method.\n",
+    "    return score\n",
     "\n",
-    "# Simulated or actual HDEMG data would be processed as follows:\n",
-    "hdemg_data_array1 = # ... load data for array 1\n",
-    "hdemg_data_array2 = # ... load data for array 2\n",
-    "hdemg_data_array3 = # ... load data for array 3\n",
+    "def score_physiological_plausibility(component):\n",
+    "    # Score based on frequency content, shape, amplitude, etc.\n",
+    "    return score\n",
     "\n",
-    "# Decompose motor units for each data array\n",
-    "mus_array1 = motor_unit_decomposition(hdemg_data_array1)\n",
-    "mus_array2 = motor_unit_decomposition(hdemg_data_array2)\n",
-    "mus_array3 = motor_unit_decomposition(hdemg_data_array3)"
+    "def score_stability_across_contractions(component, other_levels):\n",
+    "    # Compare this component to its manifestations at other contraction levels.\n",
+    "    return score\n",
+    "\n",
+    "def is_valid_motor_unit(component, other_components, other_levels):\n",
+    "    temp_score = score_temporal_independence(component, other_components)\n",
+    "    physio_score = score_physiological_plausibility(component)\n",
+    "    stability_score = score_stability_across_contractions(component, other_levels)\n",
+    "    \n",
+    "    # These thresholds would be based on empirical data and expert input\n",
+    "    if temp_score > temporal_independence_threshold and \\\n",
+    "       physio_score > physiological_plausibility_threshold and \\\n",
+    "       stability_score > stability_threshold:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7f81f359",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_cross_correlation(component, other_components):\n",
+    "    # This function should calculate the cross-correlation of the component with all other components\n",
+    "    # and return the maximum correlation value as the metric\n",
+    "    max_correlation = 0\n",
+    "    for other in other_components:\n",
+    "        correlation = np.corrcoef(component, other)[0, 1]  # Assuming component data are numpy arrays\n",
+    "        max_correlation = max(max_correlation, abs(correlation))\n",
+    "    return max_correlation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "636ccc88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rz/l50w_ggd3ql731df3bxtvb7h0000gn/T/ipykernel_7071/4172068092.py:31: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  score = 1 / np.var(firing_rate) if firing_rate > 0 else 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_firing_rate(component, threshold=0.5, fs=1000):\n",
+    "    \"\"\"\n",
+    "    Calculate the firing rate of a motor unit based on its action potentials.\n",
+    "    \n",
+    "    Args:\n",
+    "    - component: The ICA component representing the motor unit's activity.\n",
+    "    - threshold: A value above which the component's signal is considered a spike.\n",
+    "    - fs: Sampling frequency.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - firing_rate: The firing rate in Hertz (spikes per second).\n",
+    "    \"\"\"\n",
+    "    # Detect spikes: this is a simple threshold-based method, you might need a more complex algorithm\n",
+    "    spikes = component > threshold\n",
+    "    # Find the indices of the spike peaks\n",
+    "    spike_peaks = np.where((spikes[:-1] == False) & (spikes[1:] == True))[0] + 1\n",
+    "    # Calculate inter-spike intervals (ISI) in seconds\n",
+    "    isi = np.diff(spike_peaks) / fs\n",
+    "    # Calculate the firing rate as the reciprocal of the ISI\n",
+    "    if len(isi) > 0:\n",
+    "        firing_rate = 1 / np.mean(isi)\n",
+    "    else:\n",
+    "        firing_rate = 0\n",
+    "    return firing_rate\n",
+    "\n",
+    "# Update the stability score function with the new calculate_firing_rate function\n",
+    "def calculate_stability_score(component, fs=1000):\n",
+    "    # Calculate the firing rate using the implemented function\n",
+    "    firing_rate = calculate_firing_rate(component, fs=fs)\n",
+    "    # Inverse of the variance could be a measure of stability\n",
+    "    score = 1 / np.var(firing_rate) if firing_rate > 0 else 0\n",
+    "    return score\n",
+    "\n",
+    "\n",
+    "def calculate_physiological_score(component):\n",
+    "    # This function should assess the physiological plausibility of the component\n",
+    "    # For demonstration, let's assume it returns a score based on the component's peak-to-peak amplitude\n",
+    "    peak_to_peak_amplitude = np.ptp(component)  # This is a simple proxy for demonstration\n",
+    "    score = peak_to_peak_amplitude / some_reference_value  # 'some_reference_value' needs to be defined\n",
+    "    return score\n",
+    "\n",
+    "\n",
+    "# Replace 'some_reference_value' with an appropriate value for your analysis\n",
+    "some_reference_value = 1.0  # Example placeholder value\n",
+    "\n",
+    "# Now you would use these functions in your validation logic\n",
+    "def validate_components(components, temporal_independence_threshold, physiological_plausibility_threshold, stability_threshold):\n",
+    "    valid_components = []\n",
+    "    for component in components:\n",
+    "        temp_indep_score = calculate_cross_correlation(component, components)\n",
+    "        physio_score = calculate_physiological_score(component)\n",
+    "        stability_score = calculate_stability_score(component)\n",
+    "        \n",
+    "        # Check if all scores are above their respective thresholds\n",
+    "        if temp_indep_score < temporal_independence_threshold and \\\n",
+    "           physio_score > physiological_plausibility_threshold and \\\n",
+    "           stability_score > stability_threshold:\n",
+    "            valid_components.append(component)\n",
+    "            \n",
+    "    return valid_components\n",
+    "\n",
+    "# Now apply the validation function\n",
+    "valid_increase_one = validate_components(S_increase_one, temporal_independence_threshold, physiological_plausibility_threshold, stability_threshold)\n",
+    "valid_increase_two = validate_components(S_increase_two, temporal_independence_threshold, physiological_plausibility_threshold, stability_threshold)\n",
+    "valid_steady = validate_components(S_steady, temporal_independence_threshold, physiological_plausibility_threshold, stability_threshold)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "aea7bd78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of motor units in increase_mat_one: 0\n",
+      "Number of motor units in increase_mat_two: 0\n",
+      "Number of motor units in steady_mat: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_motor_units_one = len(valid_increase_one)\n",
+    "num_motor_units_two = len(valid_increase_two)\n",
+    "num_motor_units_steady = len(valid_steady)\n",
+    "\n",
+    "print(f\"Number of motor units in increase_mat_one: {num_motor_units_one}\")\n",
+    "print(f\"Number of motor units in increase_mat_two: {num_motor_units_two}\")\n",
+    "print(f\"Number of motor units in steady_mat: {num_motor_units_steady}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3dabb6b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1500x700 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Plot some of the valid components\n",
+    "def plot_components(components, num_to_plot):\n",
+    "    plt.figure(figsize=(15, 7))\n",
+    "    for i, component in enumerate(components[:num_to_plot]):\n",
+    "        plt.subplot(num_to_plot, 1, i + 1)\n",
+    "        plt.plot(component)\n",
+    "        plt.title(f'Component {i}')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "plot_components(valid_increase_one, 5)  # Plot 5 components as an example\n"
    ]
   }
  ],
@@ -303,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
